--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.21.0",
     "source-map-support": "^0.5.12",
+    "test262-parser-tests": "0.0.5",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
     "tslint": "^5.16.0",
