--- a/bench/package.json
+++ b/bench/package.json
@@ -8,20 +8,20 @@
     "parse:loc": "ts-node -r esm src/parse.ts module,loc"
   },
   "devDependencies": {
-    "@types/node": "10.12.18",
-    "@types/benchmark": "1.0.31",
-    "cherow": "dev",
-    "cross-env": "5.2.0",
-    "benchmark": "2.1.4",
-    "esm": "3.2.4",
-    "ts-node": "7.0.1",
-    "tsconfig-paths": "3.7.0",
-    "typescript": "3.2.2",
-    "jquery": "3.3.1",
-    "react": "16.8.2",
-    "vue": "2.6.6",
-    "angular": "1.7.7",
     "@aurelia/jit-html-browser": "0.3.0-dev.20190112",
-    "inferno": "7.1.7"
+    "@types/benchmark": "1.0.31",
+    "@types/node": "12.0.4",
+    "angular": "1.7.8",
+    "benchmark": "2.1.4",
+    "cherow": "1.6.9",
+    "cross-env": "5.2.0",
+    "esm": "3.2.4",
+    "inferno": "7.1.13",
+    "jquery": "^3.4.1",
+    "react": "16.8.6",
+    "ts-node": "8.0.2",
+    "tsconfig-paths": "3.8.0",
+    "typescript": "3.5.1",
+    "vue": "2.6.10"
   }
 }
