--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "lint": "cross-env tslint -p tsconfig.json -t stylish",
+    "lint": "eslint \"{src,test,scripts}/**/*.{ts,js}\"",
     "prettier": "node ./scripts/prettier.js write-changed",
     "prettier-all": "node ./scripts/prettier.js write",
     "bundle": "cross-env rimraf dist && node scripts/bundle.js",
@@ -62,8 +62,11 @@
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.10",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "coveralls": "^3.0.4",
     "cross-env": "^5.2.0",
+    "eslint": "^6.0.1",
     "husky": "^2.4.1",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
