--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ test: &test
   steps:
     - checkout
     - run: node --version
-    - run: npm ci
+    - run: npm install
     - run: npm run test
 
 executors:
@@ -62,6 +62,18 @@ jobs:
       - checkout
       - run: npm ci
       - run: npm run bundle
+
+  test-6:
+    <<: *test
+    executor:
+      name: docker-circleci
+      node: "6.17.1"
+
+  test-8:
+    <<: *test
+    executor:
+      name: docker-circleci
+      node: "8.16.1"
 
   test-10:
     <<: *test
@@ -144,6 +156,10 @@ workflows:
           <<: *filter_ignore_dev
       - bundle:
           <<: *filter_ignore_dev
+      - test-6:
+          <<: *filter_ignore_dev
+      - test-8:
+          <<: *filter_ignore_dev
       - test-10:
           <<: *filter_ignore_dev
       - test-12:
@@ -163,6 +179,8 @@ workflows:
       - build
       - lint
       - bundle
+      - test-6
+      - test-8
       - test-10
       - test-12
       - merge_and_dist:
@@ -170,5 +188,7 @@ workflows:
             - build
             - lint
             - bundle
+            - test-6
+            - test-8
             - test-10
             - test-12
