--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "stripInternal": true,
     "target": "es2018",
     "typeRoots": ["./node_modules/@types"],
-    "types": ["node"]
+    "types": ["node", "mocha"]
   },
   "include": ["src"]
 }
