Allow fast testing of specific files

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "prettier-all": "node ./scripts/prettier.js write",
     "bundle": "cross-env rimraf dist && node scripts/bundle.js",
     "bundle:bench": "cross-env rimraf dist && node scripts/bundle.js bench",
-    "test": "cross-env TS_NODE_PROJECT=\"test/tsconfig.json\" mocha \"test/**/*.ts\" -c -R progress -r ts-node/register -r source-map-support/register --recursive --globals expect",
+    "test": "mocha \"test/**/*.ts\"",
+    "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
     "test:verbose": "npm run test -- -R spec",
     "test:watch:verbose": "npm run test:watch -- -R spec",
