feat(parser): 'export' '*' 'as' IdentifierName 'from' ModuleSpecifier ';'
https://github.com/tc39/ecma262/pull/1174

@guylewin Can you verify if I did this correct?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
       "**/build": true,
       "**/.vscode": true
     },
-    "prettier.singleQuote": true
+    "prettier.singleQuote": true,
+    "deepscan.ignoreConfirmWarning": true
   }
