--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "sourceMap": true,
     "strict": true,
     "stripInternal": true,
-    "target": "es2018",
+    "target": "ES2020",
     "typeRoots": ["./node_modules/@types"],
     "types": ["node", "mocha"]
   },
