--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "test:watch:verbose": "npm run test:watch -- -R spec",
     "prepare-nightly": "node scripts/bump-dev-version",
     "coverage": "cross-env TS_NODE_PROJECT=\"test/tsconfig.json\" nyc -n \"src/**/*.ts\" -e .ts -i ts-node/register -r text-summary -r lcov -r html npm test",
-    "post_coverage": "cross-env cat ./coverage/lcov.info | coveralls"
+    "post_coverage": "cross-env cat ./coverage/lcov.info | coveralls",
+    "prepublish": "npm run bundle"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
