--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "postversion": "git push && git push --tags && npm publish"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
