--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "strict": true,
     "stripInternal": true,
     "target": "ES2020",
+    "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"],
     "types": ["node", "mocha"]
   },
