fix: fix wrong typescript def file location
closes #153

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "dist/meriyah.esm.js",
   "jsnext:main": "dist/meriyah.esm.js",
   "browser": "dist/meriyah.umd.js",
-  "types": "dist/meriyah.d.ts",
-  "typings": "dist/meriyah.d.ts",
+  "types": "dist/src/meriyah.d.ts",
+  "typings": "dist/src/meriyah.d.ts",
   "author": "KFlash",
   "license": "ISC",
   "homepage": "https://github.com/meriyah/meriyah",
