--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "fuse-box": "4.0.0-alpha.49",
-    "node-sass": "^4.12.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "node-sass": "^5.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/react": "^16.8.22",
-    "codemirror": "^5.48.0",
-    "hyperapp": "2.0.0-beta.22",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@types/react": "^17.0.1",
+    "codemirror": "^5.59.2",
+    "meriyah": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
