fix: gh pages is served in /meriyah/

--- a/docs/manifest-browser.json
+++ b/docs/manifest-browser.json
@@ -1,14 +1,14 @@
 [
   {
-    "absPath": "/Users/huocp/github/meriyah/docs/app.01016fa86.js",
-    "browserPath": "/app.01016fa86.js",
-    "relativePath": "app.01016fa86.js",
+    "absPath": "/Users/huocp/github/meriyah/docs/app.8f4b07a.js",
+    "browserPath": "/meriyah/app.8f4b07a.js",
+    "relativePath": "app.8f4b07a.js",
     "type": "js",
     "webIndexed": true
   },
   {
     "absPath": "/Users/huocp/github/meriyah/docs/styles/styles.7d66ee88.css",
-    "browserPath": "/styles/styles.7d66ee88.css",
+    "browserPath": "/meriyah/styles/styles.7d66ee88.css",
     "relativePath": "styles/styles.7d66ee88.css",
     "type": "css",
     "webIndexed": true
