fix: use / to serve gh-pages

--- a/docs/manifest-browser.json
+++ b/docs/manifest-browser.json
@@ -1,14 +1,14 @@
 [
   {
-    "absPath": "/Users/huocp/github/meriyah/docs/app.5fb6f54e.js",
-    "browserPath": "/meriyah/app.5fb6f54e.js",
-    "relativePath": "app.5fb6f54e.js",
+    "absPath": "/Users/huocp/github/meriyah/docs/app.06981ecc.js",
+    "browserPath": "/meriyah/docs/app.06981ecc.js",
+    "relativePath": "app.06981ecc.js",
     "type": "js",
     "webIndexed": true
   },
   {
     "absPath": "/Users/huocp/github/meriyah/docs/styles/styles.7d66ee88.css",
-    "browserPath": "/meriyah/styles/styles.7d66ee88.css",
+    "browserPath": "/meriyah/docs/styles/styles.7d66ee88.css",
     "relativePath": "styles/styles.7d66ee88.css",
     "type": "css",
     "webIndexed": true
