--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meriyah",
   "version": "4.1.1",
   "description": "A 100% compliant, self-hosted javascript parser with high focus on both performance and stability",
-  "main": "dist/meriyah.umd.js",
+  "main": "dist/meriyah.umd.cjs",
   "module": "dist/meriyah.esm.js",
   "jsnext:main": "dist/meriyah.esm.js",
   "browser": "dist/meriyah.umd.js",
