Add unpkg field

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/meriyah.esm.js",
   "jsnext:main": "dist/meriyah.esm.js",
   "browser": "dist/meriyah.umd.js",
+  "unpkg": "dist/meriyah.umd.js",
   "type": "module",
   "exports": {
     "import": "./dist/meriyah.esm.js",
