--- a/package.json
+++ b/package.json
@@ -101,12 +101,13 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-typescript2": "^0.30.0",
     "source-map-support": "^0.5.19",
     "standard-changelog": "^2.0.27",
     "test262-parser-tests": "0.0.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3",
     "unexpected": "^12.0.0",
     "unicode-13.0.0": "^0.8.0"
