--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "jsnext:main": "dist/meriyah.esm.js",
   "browser": "dist/meriyah.umd.min.js",
   "unpkg": "dist/meriyah.umd.min.js",
-  "type": "module",
   "exports": {
-    "import": "./dist/meriyah.esm.js",
+    "import": "./dist/meriyah.esm.mjs",
     "require": "./dist/meriyah.cjs"
   },
   "types": "dist/src/meriyah.d.ts",
@@ -67,7 +66,7 @@
     "prettier-all": "node ./scripts/prettier.js write",
     "bundle": "cross-env rimraf dist && node scripts/bundle.js",
     "bundle:bench": "cross-env rimraf dist && node scripts/bundle.js bench",
-    "test": "mocha \"test/**/*.ts\"",
+    "test": "mocha --\"test/**/*.ts\"",
     "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
     "test:verbose": "npm run test -- -R spec",
@@ -82,40 +81,35 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "chalk": "^4.1.0",
-    "coveralls": "^3.1.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "chalk": "^4.1.2",
+    "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.17.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "glob": "^7.1.6",
-    "husky": "^4.3.7",
-    "mocha": "^8.2.1",
+    "glob": "^8.0.3",
+    "husky": "^8.0.1",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "path": "^0.12.7",
-    "prettier": "^2.2.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.1",
+    "rollup": "^2.77.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "source-map-support": "^0.5.19",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "source-map-support": "^0.5.21",
     "standard-changelog": "^2.0.27",
     "test262-parser-tests": "0.0.5",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
-    "unexpected": "^12.0.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.0.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "unexpected": "^13.0.0",
     "unicode-13.0.0": "^0.8.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "node ./scripts/prettier.js check-changed"
-    }
   },
   "engines": {
     "node": ">=10.4.0"
