--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "prepublishOnly": "npm run bundle",
     "preversion": "npm test",
     "version": "standard-changelog && git add CHANGELOG.md",
-    "postversion": "git push && git push --tags && npm publish"
+    "postversion": "git push && git push --tags && npm publish",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
