--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "@unicode/unicode-15.1.0": "^1.5.2",
     "chalk": "^4.1.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
@@ -110,8 +111,7 @@
     "tsconfig-paths": "^4.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "unexpected": "^13.0.0",
-    "unicode-13.0.0": "^0.8.0"
+    "unexpected": "^13.0.0"
   },
   "engines": {
     "node": ">=10.4.0"
