--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "lint": "eslint \"{src,test}/**/*.{ts,js}\"",
     "prettier": "node ./scripts/prettier.js write-changed",
     "prettier-all": "node ./scripts/prettier.js write",
-    "bundle": "cross-env rimraf dist && node scripts/bundle.js",
-    "bundle:bench": "cross-env rimraf dist && node scripts/bundle.js bench",
+    "bundle": "rimraf dist && node scripts/bundle.js",
+    "bundle:bench": "rimraf dist && node scripts/bundle.js bench",
     "test": "mocha --\"test/**/*.ts\"",
     "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
@@ -82,7 +82,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
@@ -100,9 +101,8 @@
     "path": "^0.12.7",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.77.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.32.1",
+    "rollup": "^4.18.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "source-map-support": "^0.5.21",
     "standard-changelog": "^2.0.27",
     "test262-parser-tests": "0.0.5",
