--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "husky": "^9.0.11",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "prettier": "^3.3.1",
+    "prettier": "3.3.1",
     "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
     "rollup-plugin-typescript2": "^0.36.0",
