Upgrade eslint to v9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,15 @@
     "**/build": true,
     "**/.vscode": true
   },
-  "prettier.singleQuote": true,
-  "deepscan.ignoreConfirmWarning": true
+  "deepscan.ignoreConfirmWarning": true,
+  "[javascript][typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": ["source.fixAll.eslint"]
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  },
+  "eslint.experimental.useFlatConfig": true,
+  "prettier.requireConfig": true
 }
