--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint \"{src,test}/**/*.{ts,js}\"",
+    "lint:eslint": "eslint .",
     "lint:prettier": "prettier . --check",
     "fix": "npm run fix:eslint && npm run fix:prettier",
-    "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:eslint": "eslint . --fix",
     "fix:prettier": "prettier . --write",
     "bundle": "rimraf dist && node scripts/bundle.js",
     "bundle:bench": "rimraf dist && node scripts/bundle.js bench",
@@ -85,18 +85,17 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
     "@unicode/unicode-15.1.0": "^1.5.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.8.1",
     "husky": "^9.0.11",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
@@ -111,6 +110,7 @@
     "tsconfig-paths": "^4.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
+    "typescript-eslint": "^7.12.0",
     "unexpected": "^13.0.0"
   },
   "engines": {
