--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
-    "bundle": "rimraf dist && node scripts/bundle.js",
-    "bundle:bench": "rimraf dist && node scripts/bundle.js bench",
+    "bundle": "node scripts/bundle.js",
+    "bundle:bench": "node scripts/bundle.js bench",
     "test": "mocha --\"test/**/*.ts\"",
     "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
@@ -100,7 +100,6 @@
     "mocha": "^10.4.0",
     "nyc": "^15.1.0",
     "prettier": "3.3.1",
-    "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "source-map-support": "^0.5.21",
