--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - run: npm i --legacy-peer-deps
-      - run: npm lint
+      - run: npm run lint
 
   build:
     runs-on: ubuntu-latest
