--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "eslint",
     "lint:prettier": "prettier . --check",
     "fix": "npm run fix:eslint && npm run fix:prettier",
-    "fix:eslint": "eslint . --fix",
+    "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
-    "bundle": "rimraf dist && node scripts/bundle.js",
-    "bundle:bench": "rimraf dist && node scripts/bundle.js bench",
+    "bundle": "node scripts/bundle.js",
+    "bundle:bench": "node scripts/bundle.js bench",
     "test": "mocha --\"test/**/*.ts\"",
     "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
@@ -85,39 +85,39 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.3",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.14.2",
     "@unicode/unicode-15.1.0": "^1.5.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.21.0",
+    "eslint": "^9.4.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.8.1",
     "husky": "^9.0.11",
-    "mocha": "^10.0.0",
+    "mocha": "^10.4.0",
     "nyc": "^15.1.0",
     "prettier": "3.3.1",
-    "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "source-map-support": "^0.5.21",
-    "standard-changelog": "^2.0.27",
+    "standard-changelog": "^6.0.0",
     "test262-parser-tests": "0.0.5",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
-    "tslib": "^2.4.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.3",
     "typescript": "^4.7.4",
     "typescript-eslint": "^7.12.0",
-    "unexpected": "^13.0.0"
+    "unexpected": "^13.2.1"
   },
   "engines": {
     "node": ">=10.4.0"
   },
   "lint-staged": {
-    "*.{ts,js}": "eslint --fix",
+    "*.{ts,mts,cts,js,mjs,cjs}": "eslint --fix",
     "*": "prettier --write --ignore-unknown"
   }
 }
