chore: fix eslint related dependencies
- Migrate `eslint-plugin-import` to `eslint-plugin-import-x`
- Update `typescript-eslint` to v8

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - run: npm i --legacy-peer-deps
+      - run: npm i
       - run: npm run lint
 
   test:
@@ -41,5 +41,5 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i --legacy-peer-deps
+      - run: npm i
       - run: npm test
