--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.8.1",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "mocha": "^10.4.0",
     "nyc": "^15.1.0",
     "prettier": "3.3.1",
@@ -108,8 +109,7 @@
     "test262-parser-tests": "0.0.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.6.3",
-    "typescript": "^4.7.4",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0",
     "unexpected": "^13.2.1"
   },
