--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "source-map-support": "^0.5.21",
     "standard-changelog": "^6.0.0",
-    "test262-parser-tests": "0.0.5",
+    "test262": "tc39/test262#880f8a5ba64d4e9df02e4c961e5abb9dec380f2b",
+    "test262-parser-runner": "^0.5.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
