--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,5 +41,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm i
       - run: npm test
