chore: reduce dist files to esm, cjs, and umd
BREAKING CHANGE: only distribute following files:
dist/meriyah.cjs
dist/meriyah.mjs
dist/meriyah.min.mjs
dist/meriyah.umd.js
dist/meriyah.umd.min.js
All transpiled with target: "ES2021"

--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "5.0.0",
   "description": "A 100% compliant, self-hosted javascript parser with high focus on both performance and stability",
   "main": "dist/meriyah.cjs",
-  "module": "dist/meriyah.esm.js",
-  "jsnext:main": "dist/meriyah.esm.js",
+  "module": "dist/meriyah.min.mjs",
   "browser": "dist/meriyah.umd.min.js",
   "unpkg": "dist/meriyah.umd.min.js",
-  "exports": {
-    "import": "./dist/meriyah.esm.mjs",
-    "require": "./dist/meriyah.cjs",
-    "types": "./dist/src/meriyah.d.ts"
-  },
   "types": "dist/src/meriyah.d.ts",
   "typings": "dist/src/meriyah.d.ts",
+  "exports": {
+    "types": "./dist/src/meriyah.d.ts",
+    "import": "./dist/meriyah.min.mjs",
+    "require": "./dist/meriyah.cjs"
+  },
   "license": "ISC",
   "homepage": "https://github.com/meriyah/meriyah",
   "repository": {
@@ -31,6 +30,10 @@
     {
       "name": "Chunpeng Huo",
       "url": "https://github.com/3cp"
+    },
+    {
+      "name": "Fisker Cheung",
+      "url": "https://github.com/fisker"
     }
   ],
   "keywords": [
@@ -51,7 +54,6 @@
   ],
   "files": [
     "dist",
-    "src",
     "README.md",
     "CHANGELOG.md",
     "LICENSE.md"
