--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [22, 20, 18, 16]
+        node-version: [22, 20, 18]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
