chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -84,32 +84,31 @@
     "generate-test262-whitelist": "node scripts/generate-test262-whitelist.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.9.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.14.2",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.5.0",
     "@unicode/unicode-15.1.0": "^1.5.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.7.0",
-    "eslint-plugin-import-x": "^3.0.1",
-    "eslint-plugin-n": "^17.8.1",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "mocha": "^10.4.0",
-    "nyc": "^15.1.0",
-    "prettier": "3.3.1",
-    "rollup": "^4.18.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-import-x": "^3.1.0",
+    "eslint-plugin-n": "^17.10.2",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
+    "mocha": "^10.7.3",
+    "nyc": "^17.0.0",
+    "prettier": "3.3.3",
+    "rollup": "^4.21.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "source-map-support": "^0.5.21",
     "standard-changelog": "^6.0.0",
-    "test262": "tc39/test262#880f8a5ba64d4e9df02e4c961e5abb9dec380f2b",
+    "test262": "tc39/test262#ea11e0e78739b2be9fd2f49787955b9c2bf54bcc",
     "test262-parser-runner": "^0.5.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "rc-v8",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0",
     "unexpected": "^13.2.1"
   },
   "engines": {
