chore: update readme and package.json

--- a/package.json
+++ b/package.json
@@ -37,16 +37,10 @@
     "ecmascript",
     "javascript",
     "parser",
-    "performance",
     "estree",
-    "es2018",
-    "es2019",
-    "es2020",
-    "es2021",
     "esnext",
     "lexer",
-    "ast",
-    "lightweight"
+    "ast"
   ],
   "files": [
     "dist",
