--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,13 @@
 node_modules
 /coverage
 /.nyc_output
-/.rpt2_cache
-/packages/*/node_modules
-/packages/*/npm-debug.log
-/packages/*/build
-/packages/*/lib
-/packages/*/coverage
-/packages/*/.nyc_output
-/packages/*/.rpt2_cache
 yarn.lock
 *.log
-repl-dev
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.rollupcache
-.fuzz-output
 .DS_Store
-cherow-rewritten.js
 /.cache
 /dist
-
-# fuzz output
-/packages/cherow/.fuzz-output/
+bun.lockb
+test.ts
