chore: update and clean dependencies

--- a/package.json
+++ b/package.json
@@ -78,32 +78,30 @@
     "generate-test262-whitelist": "node scripts/generate-test262-whitelist.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.12.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "^22.5.0",
-    "@unicode/unicode-16.0.0": "^1.0.0",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.7.6",
+    "@unicode/unicode-16.0.0": "^1.6.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.9.0",
-    "eslint-plugin-import-x": "^3.1.0",
-    "eslint-plugin-n": "^17.10.2",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.9",
+    "eslint": "^9.12.0",
+    "eslint-plugin-import-x": "^4.3.1",
+    "eslint-plugin-n": "^17.11.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "mocha": "^10.7.3",
-    "nyc": "^17.0.0",
+    "nyc": "^17.1.0",
     "prettier": "3.3.3",
-    "rollup": "^4.21.0",
+    "rollup": "^4.24.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "standard-changelog": "^6.0.0",
-    "test262": "github:tc39/test262#ea11e0e78739b2be9fd2f49787955b9c2bf54bcc",
+    "test262": "github:tc39/test262#0645461999632a17426e45d044ee519a0f07d022",
     "test262-parser-runner": "^0.5.0",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0",
-    "unexpected": "^13.2.1"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0"
   },
   "engines": {
     "node": ">=18.0.0"
