--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import-x": "^4.3.1",
     "eslint-plugin-n": "^17.11.1",
     "husky": "^9.1.6",
