chore: use nodejs v22 for ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,31 +17,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - run: npm i
       - run: npm run lint
-
-  test:
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        # Skip nodejs v22 for now, as it implemented new features of RegExp that affects
-        # the test262 tests whitelist.
-        node-version: [20, 18]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i
       - run: npm test
