--- a/.github/workflows/update-test262.yml
+++ b/.github/workflows/update-test262.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - name: Get latest test262 commit hash
         id: test262
         run: |
