--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-import-resolver-typescript": "^4.2.2",
     "eslint-plugin-import-x": "^4.9.1",
     "eslint-plugin-n": "^17.16.2",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "mocha": "^11.1.0",
