--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
-    "bundle": "node scripts/bundle.js",
-    "bundle:bench": "node scripts/bundle.js bench",
+    "bundle": "node scripts/bundle.mjs",
+    "bundle:bench": "node scripts/bundle.mjs bench",
     "test": "mocha --\"test/**/*.ts\"",
     "test-single": "mocha",
     "test:watch": "npm run test -- --watch --watch-extensions ts",
