chore: migrate bundle script to ES Module (#380)
Co-authored-by: Chunpeng Huo <huocp@me.com>

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
-    "bundle": "node scripts/bundle.js",
-    "bundle:bench": "node scripts/bundle.js bench",
+    "bundle": "node scripts/bundle.mjs",
+    "bundle:bench": "node scripts/bundle.mjs bench",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "prepare-nightly": "node scripts/bump-dev-version",
