chore: migrate generate-test262-whitelist script to ES Module

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "version": "standard-changelog && git add CHANGELOG.md",
     "postversion": "git push && git push --tags && npm publish",
     "prepare": "husky",
-    "generate-test262-whitelist": "node scripts/generate-test262-whitelist.js"
+    "generate-test262-whitelist": "node scripts/generate-test262-whitelist.mjs"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
