chore: refactor generate-unicode script (#386)
* chore: refactor `generate-unicode` script

* build: fix build script

* chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -72,26 +72,27 @@
     "version": "standard-changelog && git add CHANGELOG.md",
     "postversion": "git push && git push --tags && npm publish",
     "prepare": "husky",
+    "generate-unicode": "node scripts/generate-unicode.mjs",
     "generate-test262-whitelist": "node scripts/generate-test262-whitelist.mjs"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "^9.24.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/node": "^22.13.11",
+    "@types/node": "^22.14.0",
     "@unicode/unicode-16.0.0": "^1.6.5",
     "@vitest/coverage-v8": "^3.1.1",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.23.0",
-    "eslint-import-resolver-typescript": "^4.2.2",
-    "eslint-plugin-import-x": "^4.9.1",
-    "eslint-plugin-n": "^17.16.2",
+    "eslint": "^9.24.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import-x": "^4.10.2",
+    "eslint-plugin-n": "^17.17.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
-    "rollup": "^4.37.0",
+    "rollup": "^4.39.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "standard-changelog": "^6.0.0",
     "test262": "github:tc39/test262#cf4c281a3857d88f7165bc022b059132d71ef0ce",
