chore: fix types for test files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "types": ["node", "vitest/globals", "./types/test262-parser-runner.d.ts"],
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
