--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:cspell",
     "lint:eslint": "eslint",
     "lint:prettier": "prettier . --check",
+    "lint:cspell": "cspell . --gitignore",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
@@ -85,6 +86,7 @@
     "@vitest/coverage-v8": "^3.1.1",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
+    "cspell": "^8.18.1",
     "eslint": "^9.24.0",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import-x": "^4.10.2",
