--- a/.github/workflows/update-test262.yml
+++ b/.github/workflows/update-test262.yml
@@ -3,8 +3,8 @@ name: Update test262
 on:
   workflow_dispatch:
   schedule:
-    # “At 00:00 on Sunday.” https://crontab.guru/#0_0_*_*_0
-    - cron: '0 0 * * 0'
+    # “At 00:00 on day-of-month 1.” https://crontab.guru/#0_0_1_*_*
+    - cron: '0 0 1 * *'
 
 permissions:
   pull-requests: write
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
       - name: Get latest test262 commit hash
         id: test262
         run: |
