--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,6 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: ./package.json
       - run: yarn
-      - run: node --run bundle
-      - run: node --run test
-      - run: node --run lint
+      - run: yarn bundle
+      - run: yarn test
+      - run: yarn lint
