--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,12 +18,23 @@ concurrency:
 
 jobs:
   test:
+    strategy:
+      fail-fast: false
+      matrix:
+        node:
+          - '24'
+          - '22'
+          # Not support `fs.glob`
+          # - '20'
+          # Can't install
+          # - '18'
+    name: Node.js ${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: ${{ matrix.node }}
           cache: 'yarn'
           cache-dependency-path: ./package.json
       - run: yarn
