--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,6 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: ./package.json
       - run: yarn
-      - run: node --run bundle
-      - run: node --run test
-      - run: node --run lint
+      - run: npm run bundle
+      - run: npm run test
+      - run: npm run lint
