--- a/package.json
+++ b/package.json
@@ -53,29 +53,28 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc -w",
-    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:cspell",
+    "build": "node scripts/build.mjs",
+    "lint": "npm run lint:eslint && npm run lint:types && npm run lint:prettier && npm run lint:cspell",
     "lint:eslint": "eslint",
     "lint:prettier": "prettier . --check",
     "lint:cspell": "cspell . --gitignore",
+    "lint:types": "tsc",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier . --write",
-    "bundle": "node scripts/bundle.mjs",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "production-test": "npm run bundle && cross-env PRODUCTION_TEST=1 vitest test/production/production-tests.ts",
+    "production-test": "npm run build && cross-env PRODUCTION_TEST=1 vitest test/production/production-tests.ts",
     "prepare-nightly": "node scripts/bump-dev-version.mjs",
     "coverage": "vitest --coverage",
     "post_coverage": "cross-env cat ./coverage/lcov.info | coveralls",
-    "prepublishOnly": "npm run bundle",
+    "prepublishOnly": "npm run build",
     "preversion": "npm test",
     "version": "standard-changelog && git add CHANGELOG.md",
     "postversion": "git push && git push --tags && npm publish",
     "prepare": "husky",
     "generate-unicode": "node scripts/generate-unicode.mjs",
-    "generate-test262-whitelist": "npm run bundle && node scripts/generate-test262-whitelist.mjs"
+    "generate-test262-whitelist": "npm run build && node scripts/generate-test262-whitelist.mjs"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
