--- a/.github/workflows/update-test262.yml
+++ b/.github/workflows/update-test262.yml
@@ -19,12 +19,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24
-      - name: Get latest test262 commit hash
-        id: test262
-        run: |
-          echo "hash=$(git ls-remote --exit-code https://github.com/tc39/test262.git HEAD | cut -f1)" >> $GITHUB_OUTPUT
-      - run: |
-          npm install --save-dev test262@github:tc39/test262#${{ steps.test262.outputs.hash }}
+      - name: Update test262 commit hash
+        run: git ls-remote --exit-code https://github.com/tc39/test262.git HEAD | cut -f1 > test262/test262-commit-hash
+      - run: yarn
       - run: npm run generate-test262-whitelist
       - uses: peter-evans/create-pull-request@v7
         with:
